@@ -60,10 +60,13 @@ class ConfigurationTreeEditor extends DefaultTreeCellEditor
 
 	if (toBeEdited == null) return null;
 	
+	Configuration config = (Configuration)treeModel.getRoot();
+
 	if (toBeEdited instanceof Referencable) {
 	    Referencable referencable = (Referencable)toBeEdited;
 	    try {
 		referencable.setName(name);
+		config.setHasChanged(true);
 		treeModel.nodeChanged(referencable);
 		for (int i=0;i<referencable.referenceCount();i++)
 		    treeModel.nodeChanged(referencable.reference(i));
@@ -77,6 +80,7 @@ class ConfigurationTreeEditor extends DefaultTreeCellEditor
 	    Template template = instance.template();
 	    try {
 		instance.setName(name);
+		config.setHasChanged(true);
 		treeModel.nodeChanged(instance);
 	    }
 	    catch (DataException e) {
@@ -88,6 +92,7 @@ class ConfigurationTreeEditor extends DefaultTreeCellEditor
 	    ModuleInstance  instance  = (ModuleInstance)reference.parent();
 	    try {
 		instance.setName(name);
+		config.setHasChanged(true);
 		treeModel.nodeChanged(instance);
 		for (int i=0;i<instance.referenceCount();i++)
 		    treeModel.nodeChanged(instance.reference(i));
